Fall 2015/WANG_ZILONG_Asg1/Assigment Instruction/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_60\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\Program Files (x86)\BlueJ\lib\bluejcore.jar;D:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;D:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\WANGZ\Desktop\WANG_ZILONG_Asg1
-d
C:\Users\WANGZ\Desktop\WANG_ZILONG_Asg1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
D:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\WANGZ\Desktop\WANG_ZILONG_Asg1\TemperatureProfiler.java
<---- end of javadoc command ---->
Loading source file C:\Users\WANGZ\Desktop\WANG_ZILONG_Asg1\TemperatureProfiler.java...
C:\Users\WANGZ\Desktop\WANG_ZILONG_Asg1\TemperatureProfiler.java:18: error: '(' or '[' expected
        ArrayList<Information> info = new ArrayList<Information>;
                                                                ^
1 error
